--- a/scenarioA/services/my-account/R&A/privacy-notice-terms-and-conditions.html
+++ b/scenarioA/services/my-account/R&A/privacy-notice-terms-and-conditions.html
@@ -138,7 +138,7 @@
       <p>You have the right to the protection of, access to, and correction of your personal information, which is described in personal information banks ESDC PPU 390 Social Insurance Number Registry and ESDC PPU 680 My Service Canada Account. Instructions for obtaining this information is outlined in the following government publications entitled Information about programs and information holdings.</p>
       <p>You have the right to file a complaint with the <em>Privacy Commissioner of Canada</em> regarding our handling of your personal information.</p>
       <h2>System Requirements</h2>
-      <ol class="list-upper-alpha">
+      <ol class="lst-lwr-alph">
         <li>You must have cookies enabled in your browser. If cookies are disabled in your web browser’s security setting, you may have trouble signing in and you will not be able to use MSCA.</li>
         <li>If you save the MSCA webpage to your bookmarks or favorites tab in your web browser, you may experience technical difficulties.</li>
         <li>To use MSCA, you must have access to a compatible Web browser. Options include Internet Explorer (version 9 or newer), Mozilla Firefox (version 22 or newer), Safari (version 5 or newer) or Google Chrome (version 28 or newer).</li>
@@ -151,65 +151,66 @@
       <p>For the purposes of these Terms and Conditions, “ESDC” means Her Majesty the Queen in right of Canada as represented by the Minister of Employment and Social Development and “CEIC” means the Canada Employment Insurance Commission.</p>
       <ol>
         <li><strong>Your User ID and Password</strong>
-          <ol class="list-upper-alpha">
+          <ol class="lst-lwr-alph">
             <li>You understand and agree that your user ID and/or password are unique to you, that is, that you must not disclose and that no one else has or may use your user ID and/or password except as permitted by, as applicable, these Terms and Conditions of use, by GCKey, by the Sign-In Partner, or by the Trusted Digital Identity you have selected.</li>
             <li>You are responsible and accountable for your user ID and password.</li>
             <li>You are responsible, accountable and liable for all use and misuse of your user ID and password.</li>
             <li>You must protect the confidentiality of your user ID and password.</li>
             <li>You must not disclose your EI access code or personal access code to anyone.</li>
             <li>By submitting a user ID and password when accessing MSCA, you certify each and every time you submit your user ID and password that:
-              <ol class="list-upper-roman">
+              <ol class="lst-lwr-rmn">
                 <li>You have not disclosed the user ID and password to anyone except as permitted by, as applicable, these Terms and Conditions of use by GCKey, by the Sign-In Partner, or by the Trusted Digital Identity you have selected; and </li>
                 <li>There has been no unauthorized access to or disclosure of the user ID and/or password you submit.</li>
               </ol>
             </li>
             <li>If you suspect that your user ID and/or password have been compromised, you must immediately inform ESDC. For the purpose of these Terms and Conditions ‘compromised’ means that, there has been an unauthorized use or disclosure of your user ID and/or password.</li>
             <li>If you use a shared or public computer, we recommend that you:
-				<ol class="list-upper-roman">
-            <li>Do not choose to have your user ID or password remembered by your Web browser; </li>
-            <li>Log out of your account every time you leave the computer; and sign out; and</li>
-            <li>Clear your browser’s cache and close down your browser after you finish your online session.</li>
-          </ol>
-			  </li>
-        <li><strong>Your Use of MSCA</strong>
-          <ol>
-            <li>You are responsible, accountable and liable for all use and misuse of MSCA associated with your user ID and password.</li>
-            <li>You must use the services provided via MSCA solely for the purposes for which they are offered and for no other purpose including for no improper or illegal purpose or activity.</li>
-            <li>You must not use MSCA on behalf of anyone else and you must not allow anyone else to use your MSCA.</li>
-            <li>You must access and use MSCA only as yourself.</li>
-            <li>A registered trustee, guardian, or other legal representative may act on your behalf in person, by mail or by phone, but not online.</li>
-            <li>You understand and agree that your access to MSCA may be suspended or revoked without notice if ESDC or the CEIC suspects that you have not complied with these Terms and Conditions of use.</li>
-            <li>I hereby certify that all information provided to ESDC or the CEIC via MSCA is true, accurate, current and complete.</li>
-            <li>If, at any time, you withdraw your agreement to any of the Terms and Conditions, you must stop using MSCA and notify: EDSC.Soutient.SCE.INA-ECAS.RNA.Support.ESDC@servicecanada.gc.ca</li>
-          </ol>
-        </li>
-        <li><strong>Disclaimers</strong>
-          <ol class="list-upper-alpha">
-            <li>You understand and agree that ESDC and the CEIC provide the MSCA “as is” with no representation, warranty or guarantee, implied or express, of any kind whatsoever and that ESDC and the CEIC disclaim any and all liability for any loss, damage or injury arising from or related to:
-              <ol class="list-upper-roman">
-                <li>Any matters or factors outside of its control, including the availability or unavailability of the internet, or telecommunications or other infrastructure systems, or for any restriction, delay, malfunction or unavailability of the MSCA service;</li>
-                <li>The unavailability of any site that can be accessed through a transfer link from the MSCA;</li>
-                <li>Any transfer of information to ESDC;</li>
-                <li>The non-acceptance of information provided through MSCA;</li>
-                <li>Any non-compliance with these Terms and Conditions.</li>
+              <ol class="lst-lwr-rmn">
+                <li>Do not choose to have your user ID or password remembered by your Web browser; </li>
+                <li>Log out of your account every time you leave the computer; and sign out; and</li>
+                <li>Clear your browser’s cache and close down your browser after you finish your online session.</li>
+              </ol>
+            </li>
+            <li><strong>Your Use of MSCA</strong>
+              <ol>
+                <li>You are responsible, accountable and liable for all use and misuse of MSCA associated with your user ID and password.</li>
+                <li>You must use the services provided via MSCA solely for the purposes for which they are offered and for no other purpose including for no improper or illegal purpose or activity.</li>
+                <li>You must not use MSCA on behalf of anyone else and you must not allow anyone else to use your MSCA.</li>
+                <li>You must access and use MSCA only as yourself.</li>
+                <li>A registered trustee, guardian, or other legal representative may act on your behalf in person, by mail or by phone, but not online.</li>
+                <li>You understand and agree that your access to MSCA may be suspended or revoked without notice if ESDC or the CEIC suspects that you have not complied with these Terms and Conditions of use.</li>
+                <li>I hereby certify that all information provided to ESDC or the CEIC via MSCA is true, accurate, current and complete.</li>
+                <li>If, at any time, you withdraw your agreement to any of the Terms and Conditions, you must stop using MSCA and notify: EDSC.Soutient.SCE.INA-ECAS.RNA.Support.ESDC@servicecanada.gc.ca</li>
+              </ol>
+            </li>
+            <li><strong>Disclaimers</strong>
+              <ol class="lst-lwr-alph">
+                <li>You understand and agree that ESDC and the CEIC provide the MSCA “as is” with no representation, warranty or guarantee, implied or express, of any kind whatsoever and that ESDC and the CEIC disclaim any and all liability for any loss, damage or injury arising from or related to:
+                  <ol class="lst-lwr-rmn">
+                    <li>Any matters or factors outside of its control, including the availability or unavailability of the internet, or telecommunications or other infrastructure systems, or for any restriction, delay, malfunction or unavailability of the MSCA service;</li>
+                    <li>The unavailability of any site that can be accessed through a transfer link from the MSCA;</li>
+                    <li>Any transfer of information to ESDC;</li>
+                    <li>The non-acceptance of information provided through MSCA;</li>
+                    <li>Any non-compliance with these Terms and Conditions.</li>
+                  </ol>
+                </li>
+              </ol>
+            </li>
+            <li><strong>Changes to these Terms and Conditions</strong>
+              <ol class="lst-lwr-alph">
+                <li>ESDC and the CEIC may change these Terms and Conditions at any time. Such changes shall be effective immediately upon notice of the change being posted on MSCA. You will be required to accept the updated Terms and Conditions in order to access MSCA after the notice has been posted. </li>
+              </ol>
+            </li>
+            <li><strong>Other</strong>
+              <ol class="lst-lwr-alph">
+                <li>These Terms and Conditions shall be governed, interpreted and construed in accordance with the laws of the Province of Ontario and the applicable laws of Canada without reference to conflict of law rules.</li>
               </ol>
             </li>
           </ol>
         </li>
-        <li><strong>Changes to these Terms and Conditions</strong>
-          <ol class="list-upper-alpha">
-            <li>ESDC and the CEIC may change these Terms and Conditions at any time. Such changes shall be effective immediately upon notice of the change being posted on MSCA. You will be required to accept the updated Terms and Conditions in order to access MSCA after the notice has been posted. </li>
-          </ol>
-        </li>
-        <li><strong>Other</strong>
-          <ol class="list-upper-alpha">
-            <li>These Terms and Conditions shall be governed, interpreted and construed in accordance with the laws of the Province of Ontario and the applicable laws of Canada without reference to conflict of law rules.</li>
-          </ol>
-        </li>
-      </ol>
-      </li>
       </ol>
       <p>By clicking “I agree”, you are agreeing to be bound by the above-noted Terms and Conditions. If you do not agree to the Terms and Conditions do not click “I agree”, and do not register for or access MSCA. You may still access the services provided by MSCA through other channels by clicking the “Contact us” link below.</p>
+      <p><a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/R&A/create-my-profile-sin.html">I agree</a>&nbsp;<a class="btn btn-primary wb-lbx" href="#inline_content">I disagree</a></p>
       
       <!-- Unnamed (EN - Canada.ca - Header) -->
       <div class="row">
