--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -88,7 +88,7 @@
       <h1 property="name" id="wb-cont" dir="ltr">Employment Insurance</h1>
       
 	  <section class="alert alert-warning">
-  <h2>Outage message</h2>
+  <h2 class="h3">Outage message</h2>
   <p>Please Insert the outage message here.</p>
 </section>
 
@@ -105,7 +105,7 @@
         </div>
         <div class="panel panel-default">
           <div class="panel-body">
-            <h3 id="a1-2" class="mrgn-tp-0">Personal information</h3>
+            <h2 id="a1-2" class="h3 mrgn-tp-0">Personal information</h2>
             <p>Personal information is used to capture your mailing address, province of residence and your preferred language specific to your EI application(s). All correspondance will be sent to the address, including any payments.</p>
             <button type="button" class="btn btn-default">Select mailing address</button>
             <button type="button" class="btn btn-default">Select your province</button>
@@ -114,7 +114,7 @@
         </div>
         <div class="panel panel-default">
           <div class="panel-body">
-            <h3 id="a1-3" class="mrgn-tp-0">Payment and Direct Deposit</h3>
+            <h2 id="a1-3" class="h3 mrgn-tp-0">Payment and Direct Deposit</h2>
             <p>The payment and direct deposit is used to view your most up-to-date payment reports and sign up for Direct Deposit.</p>
             <button type="button" class="btn btn-default">View payment information</button>
             <button type="button" class="btn btn-default">Sign up for Direct deposit</button>
@@ -122,21 +122,21 @@
         </div>
         <div class="panel panel-default">
           <div class="panel-body">
-            <h3 id="a1-4" class="mrgn-tp-0">Alert me</h3>
+            <h2 id="a1-4" class="h3 mrgn-tp-0">Alert me</h2>
             <p>Sed ullamcorper, libero elementum viverra dapibus, dolor ligula vulputate lectus, sed euismod felis eros et velit.</p>
             <button type="button" class="btn btn-default">Register</button>
           </div>
         </div>
         <div class="panel panel-default">
           <div class="panel-body">
-            <h3 id="a1-5" class="mrgn-tp-0">Records of Employment</h3>
+            <h2 id="a1-5" class="h3 mrgn-tp-0">Records of Employment</h2>
             <p>Curabitur suscipit, neque sit amet congue feugiat, augue dui mattis quam, in feugiat velit ex ac nunc.</p>
             <button type="button" class="btn btn-default">View Records of Employment</button>
           </div>
         </div>
         <div class="panel panel-default">
           <div class="panel-body">
-            <h3 id="a1-6" class="mrgn-tp-0">Tax information</h3>
+            <h2 id="a1-6" class="h3 mrgn-tp-0">Tax information</h2>
             <p>The Tax slips is used to display your tax slips for the current year and for the past six years. </p>
             <button type="button" class="btn btn-default">View your Tax slips (T4E)</button>
             <button type="button" class="btn btn-default">Mailing options</button>
@@ -144,7 +144,7 @@
         </div>
         <div class="panel panel-default">
           <div class="panel-body">
-            <h3 id="a1-7" class="mrgn-tp-0">eForms</h3>
+            <h2 id="a1-7" class="h3 mrgn-tp-0">eForms</h2>
             <p>The eForms is used to report an absence from Canada (vacation and other reasons) and/or a course or training program.</p>
             <button type="button" class="btn btn-default">Fill out an eForm</button>
             <button type="button" class="btn btn-default">View draft eForms</button>
@@ -153,7 +153,7 @@
         </div>
         <div class="panel panel-default">
           <div class="panel-body">
-            <h3 id="a1-8" class="mrgn-tp-0">Self-employed</h3>
+            <h2 id="a1-8" class="h3 mrgn-tp-0">Self-employed</h2>
             <p>Suspendisse semper dui a euismod tincidunt. Nulla lacus leo, tincidunt non commodo id, condimentum quis neque.</p>
             <button type="button" class="btn btn-default">Register</button>
             <button type="button" class="btn btn-default">Agreement status</button>
@@ -161,7 +161,7 @@
         </div>
         <div class="panel panel-default">
           <div class="panel-body">
-            <h3 id="a1-9" class="mrgn-tp-0">EI Report</h3>
+            <h2 id="a1-9" class="h3 mrgn-tp-0">EI Report</h2>
             <p>You can now complete your EI report online or report any mistakes you may have made when filling our your forms or reports.</p>
             <button type="button" class="btn btn-default">Complete EI report</button>
             <button type="button" class="btn btn-default">Made a mistake</button>
