--- a/scenarioA/services/my-account/MFA/select-security-method.html
+++ b/scenarioA/services/my-account/MFA/select-security-method.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
@@ -141,7 +140,7 @@
             <h3 class="panel-title">Use your smartphone with SMS</h3>
           </header>
           <div class="panel-body text-center">
-            <div><img src="http://esdc.prv/en/service-canada/service-delivery/sda-assist/msca/ra/mfa/images/sms.png" class="img-responsive center-block" alt="Image of a SMS"></div>
+            <div><img src="https://srv136.services.gc.ca/ECAS-SECA/RASCL/SCL/Images/sms2.png" class="img-responsive center-block" alt="Image of a SMS"></div>
             <a href="/MSCA-Prototype/scenarioA/services/my-account/MFA/sms/index.html" class=" btn btn-primary text-center" role="button">Register with SMS</a></div>
         </section>
       </div>
@@ -151,7 +150,7 @@
             <h3 class="panel-title">Use your phone with voice messaging</h3>
           </header>
           <div class="panel-body text-center">
-            <div><img src="http://esdc.prv/en/service-canada/service-delivery/sda-assist/msca/ra/mfa/images/voice.png" class="img-responsive center-block" alt="Image of a Voice"></div>
+            <div><img src="https://srv136.services.gc.ca/ECAS-SECA/RASCL/SCL/Images/voice2.png" class="img-responsive center-block" alt="Image of a Voice"></div>
             <a href="/MSCA-Prototype/scenarioA/services/my-account/MFA/voice/index.html" class=" btn btn-primary text-center" role="button">Register with voice</a> </div>
         </section>
       </div>
