--- a/scenarioA/services/my-account/MFA/voice/enter-code.html
+++ b/scenarioA/services/my-account/MFA/voice/enter-code.html
@@ -1,1 +1,240 @@
 
+
+<!DOCTYPE html>
+
+<!--[if lt IE 9]><html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" dir="ltr" lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!--<![endif]-->
+<head>
+<meta charset="utf-8"/>
+<!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
+            wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+<title>Registration and Authentication - Confirm my profile - Canada.ca</title>
+<meta content="width=device-width,initial-scale=1" name="viewport"/>
+<!-- Load closure template scripts --> 
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>
+<noscript>
+<!-- Write closure fall-back static file --> 
+<!--[if gte IE 9 | !IE ]><!-->
+<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/css/theme.min.css">
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/cdtsfixes.css">
+<!-- Are you using the application templates? If so add the following CSS file --> 
+<!-- <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/cdtsapps.css">--> 
+<!--<![endif]--> 
+<!--[if lt IE 9]>
+		<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/assets/favicon.ico" rel="shortcut icon" />
+		<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/css/ie8-theme.min.css" />
+		<![endif]--> 
+<!--[if lte IE 9]><![endif]-->
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/css/noscript.min.css" />
+<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/cdtsnoscript.css" />
+</noscript>
+<!-- Write closure template --> 
+<script type="text/javascript">
+            document.write(wet.builder.refTop({"cdnEnv":"prod","isApplication":false}));
+        </script>
+<meta name="description" content="Registration and Authentication" />
+<meta name="dcterms.title" content="Registration and Authentication" />
+<meta name="dcterms.creator" content="Government of Canada, Services Canada" />
+<meta name="dcterms.issued" title="W3CDTF" content="2018-08-09" />
+<meta name="dcterms.modified" title="W3CDTF" content="2018-08-09" />
+<meta name="dcterms.subject" title="scheme" content="Registration and Authentication" />
+<meta name="dcterms.language" title= "ISO639-2" content="en" />
+<link rel="stylesheet" type="text/css" href="/ECAS-SECA/RASCL/MasterPage/styles.css">
+
+<!-- GoC.WebTemplate Version ASPX 1.30.7010.20106 --> 
+<!-- GoC.WebTemplate.Core Version 1.30.7010.20106 -->
+</head>
+<body vocab="http://schema.org/" typeof="WebPage">
+<div id="def-top"> 
+  <!-- Write closure fall-back static file -->
+  <ul id="wb-tphp">
+    <li class="wb-slc"><a class="wb-sl" href="#wb-cont">Skip to main content</a></li>
+    <li class="wb-slc visible-sm visible-md visible-lg"><a class="wb-sl" href="#wb-info">Skip to "About this site"</a></li>
+  </ul>
+  <header>
+    <div id="wb-bnr" class="container">
+      <div class="row">
+        <div class="brand col-xs-5 col-md-4"> <a href="https://www.canada.ca/en.html"><img src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/assets/sig-blk-en.svg" alt="" /><span class="wb-inv"> Government of Canada / <span lang="fr">Gouvernement du Canada</span></span></a> </div>
+        <section id="wb-srch" class="col-lg-8 text-right">
+          <h2>Search</h2>
+          <form action="https://www.canada.ca/en/sr.html" method="get" name="cse-search-box" role="search" class="form-inline">
+            <div class="form-group">
+              <label for="wb-srch-q" class="wb-inv">Search Canada.ca</label>
+              <input name="cdn" value="canada" type="hidden">
+              <input name="st" value="s" type="hidden">
+              <input name="num" value="10" type="hidden">
+              <input name="langs" value="en" type="hidden">
+              <input name="st1rt" value="1" type="hidden">
+              <input name="s5bm3ts21rch" value="x" type="hidden">
+              <input id="wb-srch-q" list="wb-srch-q-ac" class="wb-srch-q form-control" name="q" type="search" value="" size="34" maxlength="170" placeholder="Search Canada.ca">
+              <input type="hidden" name="_charset_" value="UTF-8">
+              <datalist id="wb-srch-q-ac"> 
+                <!--[if lte IE 9]><select><![endif]--> 
+                <!--[if lte IE 9]></select><![endif]--> 
+              </datalist>
+            </div>
+            <div class="form-group submit">
+              <button type="submit" id="wb-srch-sub" class="btn btn-primary btn-small" name="wb-srch-sub"><span class="glyphicon-search glyphicon"></span><span class="wb-inv">Search</span></button>
+            </div>
+          </form>
+        </section>
+      </div>
+    </div>
+    <nav class="gcweb-menu" typeof="SiteNavigationElement">
+      <div class="container">
+        <h2 class="wb-inv">Menu</h2>
+        <button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
+        <ul role="menu" aria-orientation="vertical">
+          <li role="presentation"><a role="menuitem" href="###">Jobs and the workplace</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Immigration and citizenship</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Travel and tourism</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Business and industry</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Benefits</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Health</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Taxes</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Environment and natural resources</a></li>
+          <li role="presentation"><a role="menuitem" href="###">National security and defence</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Culture, history and sport</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Policing, justice and emergencies</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Transport and infrastructure</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Canada and the world</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Money and finances</a></li>
+          <li role="presentation"><a role="menuitem" href="###">Science and innovation</a></li>
+        </ul>
+      </div>
+    </nav>
+    <nav id="wb-bc" property="breadcrumb">
+      <h2>You are here:</h2>
+      <div class="container">
+        <div class="row">
+          <ol class="breadcrumb">
+            <li><a href="###">Home</a></li>
+          </ol>
+        </div>
+      </div>
+    </nav>
+  </header>
+</div>
+<!-- Write closure template --> 
+<script type="text/javascript">
+            var defTop = document.getElementById("def-top");
+            defTop.outerHTML = wet.builder.top({"cdnEnv":"prod","search":true,"lngLinks":[{"href":"https://srv253-hrsdc-rhdcc.fjgc-gccf.gc.ca/racr/racr.aspx?Lang=fra&ExitUrl=aHR0cHM6Ly9zcnYxMzYuc2VydmljZXMuZ2MuY2EvZWNhcy1zZWNhL3Jhc2NsL1NDTC9BdXRoZW50aWNhdGlvbi5hc3B4","lang":"fr","text":"Français"}],"showPreContent":true,"breadcrumbs":[{"href":"https://www.canada.ca/en.html","title":"Home"},{"title":"Registration and Authentication"}],"topSecMenu":true,"siteMenu":true});
+        </script>
+<div class="container">
+<div class="row">
+  <main property="mainContentOfPage" class="col-md-9 col-md-push-3" role="main">
+  <!-- the main content -->
+  
+  <div>
+ <h1>Multi-factor authentication</h1>
+<section class="panel panel-primary"><header class="panel-heading">
+<h2 class="panel-title">Enter your security code</h2>
+</header>
+<div class="panel-body">
+<p>Enter the voice security code that was sent to: (xxx) xxx-1234.</p>
+<form method="post" action="#" class="form-horizontal">
+<div class="mrgn-lft-md mrgn-rght-md">
+<div class="form-group mrgn-bttm-0"><label class="mrgn-bttm-0 required col-sm-3"> SMS code <strong class="required"> (required)</strong></label>
+<div class="col-sm-5"><input class="form-control mrgn-bttm-lg" type="text" size="50" /></div>
+</div>
+</div>
+<a href="/MSCA-Prototype/scenarioA/services/my-account/MFA/voice/successfully-registered.html" class="mrgn-tp-0 btn btn-primary text-center" role="button">Continue</a> <a href="/MSCA-Prototype/scenarioA/services/my-account/MFA/sms/index.html" class="mrgn-tp-0 btn btn-default text-center" role="button">Back</a></form></div>
+</section>
+<div class="mrgn-bttm-lg">
+<p><strong>Did not receive the security code, or code has expired?</strong></p>
+<button class="mrgn-bttm-md btn btn-default text-center" disabled="disabled">Resend SMS code</button></div>
+<p class="pull-right mrgn-tp-lg mrgn-bttm-md panel panel-default panel-body">Screen Identifier: RA-MFAREGISTRATION-VSMSREGISTRATIONSTEP2</p>
+<div class="clearfix"></div>
+    
+    <!-- end main content -->
+    <div id="def-preFooter"> 
+      <!-- Write closure fall-back static file -->
+      <div class="pagedetails">
+        <div class="row">
+          <div class="col-sm-6 col-md-5 col-lg-4"> <a href="###" class="btn btn-default text-center">Report a problem on this page</a> </div>
+        </div>
+        <!-- Share button --> 
+        <!-- <div class="wb-share col-sm-4 col-md-3 col-sm-offset-2 col-md-offset-4 col-lg-offset-5" data-wb-share='{"lnkClass": "btn btn-default btn-block"}'></div> --> 
+        <!-- END Share button -->
+        <dl id="wb-dtmd">
+          <dt>Date modified: </dt>
+          <dd>
+            <time property="dateModified">2019-03-01</time>
+          </dd>
+        </dl>
+      </div>
+    </div>
+    <!-- Write closure template --> 
+    <script type="text/javascript">
+                        var defPreFooter = document.getElementById("def-preFooter");
+                        defPreFooter.outerHTML = wet.builder.preFooter({"cdnEnv":"prod","dateModified":"2018-08-09","showPostContent":true,"showFeedback":"https://www.canada.ca/en/report-problem.html","showShare":false});
+                    </script>
+    </main>
+    <nav class="wb-sec col-md-3 col-md-pull-9" typeof="SiteNavigationElement" id="wb-sec" role="navigation">
+      <p>The menu is not available when Javascript is disabled.</p>
+    </nav>
+    <!-- Write closure template --> 
+    <script type="text/javascript">
+	                var secondarymenu = document.getElementById("wb-sec");
+	                secondarymenu.innerHTML = wet.builder.secmenu(
+	                    {"sections":[{"sectionName":"Menu","menuLinks":[{"href":"###","text":"Help"},{"href":"###","text":"Frequently asked questions (FAQs)"},{"href":"###","text":"Log Out"}]}]}
+	                );
+	            </script> 
+  </div>
+</div>
+<div id="def-footer"> 
+  <!-- Write closure fall-back static file -->
+  <footer id="wb-info">
+    <div class="landscape">
+      <nav class="container wb-navcurr">
+        <h2 class="wb-inv">About government</h2>
+        <ul class="list-unstyled colcount-sm-2 colcount-md-3">
+          <li><a href="###">Contact us</a></li>
+          <li><a href="###">Departments and agencies</a></li>
+          <li><a href="###">Public service and military</a></li>
+          <li><a href="###">News</a></li>
+          <li><a href="###">Treaties, laws and regulations</a></li>
+          <li><a href="###">Government-wide reporting</a></li>
+          <li><a href="###">Prime Minister</a></li>
+          <li><a href="###">How government works</a></li>
+          <li><a href="###">Open government</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="brand">
+      <div class="container">
+        <div class="row">
+          <nav class="col-md-10 ftr-urlt-lnk">
+            <h2 class="wb-inv">About this site</h2>
+            <ul>
+              <li><a href="###">Social media</a></li>
+              <li><a href="###">Mobile applications</a></li>
+              <li><a href="###">About Canada.ca</a></li>
+              <li><a href="###">Terms and conditions</a></li>
+              <li><a href="###">Privacy</a></li>
+            </ul>
+          </nav>
+          <div class="col-xs-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
+          <div class="col-xs-6 col-md-2 text-right"> <img src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/assets/wmms-blk.svg" alt="Symbol of the Government of Canada" /> </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</div>
+<!-- Write closure template --> 
+<script type="text/javascript">
+            var defFooter = document.getElementById("def-footer");
+            defFooter.outerHTML = wet.builder.footer( {"cdnEnv":"prod","showFooter":true,"contactLinks":[]});
+        </script> 
+<!-- Write closure template --> 
+<script type="text/javascript">
+            document.write(wet.builder.refFooter({"cdnEnv":"prod","exitScript":true,"exitURL":"/ECAS-SECA/RASCL/Support/GlobalLogout.aspx","exitMsg":"The information you have requested is outside the secure environment. If you continue, your session will be closed. Do you want to contiue?","exitDomains":"srv253-hrsdc-rhdcc.fjgc-gccf.gc.ca","displayModal":true}));
+        </script> 
+<script src='/ECAS-SECA/RASCL/SCL/js/Authentication.js'></script> 
+<script src='/ECAS-SECA/RASCL/SCL/js/SingleRequestEnforcer.js'></script>
+</body>
+</html>
